# tulioQuiz

./: pyproject.toml
tulioquiz/: arquivos.py  janelas.py  jogador.py  main.py  perguntas.py  quiz.txt  ranking.txt
