[tool.poetry]
name = "tulioQuiz"
version = "0.1.0"
description = ""
authors = ["tuliofalcao <falcao.tulio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.60.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
